testsuite/tests/grammar/invalid_lexers/spacing_3.lkt
@spacing(ids, ids)
lexer foo_lexer {
    example <- "example"
}
